<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">WhenTag</string>
    <string name="add">Add</string>
    <string name="logo">Logo</string>
    <string name="Tag">Tag</string>
    <string name="When">When</string>
    <string name="Place">Place</string>
    <string name="Tagged">Tagged</string>
</resources>
