<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#f0f0f0"       
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:paddingLeft="10dip">
	
   <!-- Row 1 Tag -->
   <TableRow 
       android:id="@+id/tablerow_tag"
       android:layout_height="wrap_content"
       android:layout_width="fill_parent"
       android:gravity="center_horizontal"
       android:background="@drawable/rectangle_border"
       android:paddingBottom="10dip">
       <!-- Tag Text (Literally) -->
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:text="@string/Tag"
           android:paddingLeft="10dip" 
           android:textColor="#f0f0f0"/>
       
       <!-- Tag Content -->
       <TextView android:id="@+id/tag_content_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"/>
     </TableRow>
     
    <!-- Row 2 When -->
   <TableRow 
       android:id="@+id/tablerow_when"
       android:layout_height="wrap_content"
       android:layout_width="fill_parent"
       android:gravity="center_horizontal"
       android:background="@drawable/rectangle_border"
       android:paddingTop="10dip"
       android:paddingBottom="10dip"
       >
       
       <!-- Tag When (Literally) -->
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:text="@string/When"
           android:paddingLeft="10dip" 
           android:textColor="#f0f0f0"/>
       
       <!-- Tag Content -->
       <TextView android:id="@+id/tag_content_when"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"/>
     </TableRow>
     
   	 <!-- Row 3 Place -->
   <TableRow 
       android:id="@+id/tablerow_place"
       android:layout_height="wrap_content"
       android:layout_width="fill_parent"
       android:gravity="center_horizontal"
       android:background="@drawable/rectangle_border"
       android:paddingTop="10dip"
       android:paddingBottom="10dip">
       
       <!-- Tag When (Literally) -->
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:text="@string/Place"
           android:paddingLeft="10dip" 
           android:textColor="#f0f0f0"/>
       
       <!-- Tag Content -->
       <TextView android:id="@+id/tag_content_place"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"/>
     </TableRow>
     
    <!-- Row 4 Tagged -->
   <TableRow 
       android:id="@+id/tablerow_tagged"
       android:layout_height="wrap_content"
       android:layout_width="fill_parent"
       android:gravity="center_horizontal"
       android:background="@drawable/layout_border"
       android:paddingTop="10dip"
       android:paddingBottom="10dip">
       
       <!-- Tag When (Literally) -->
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:text="@string/Tagged"
           android:paddingLeft="10dip"
           android:textColor="#f0f0f0" />
       
       <!-- Tag Content -->
       <LinearLayout android:id="@+id/tagged_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" 
           android:orientation="vertical">
            <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:text="@string/Tagged"
           android:paddingLeft="10dip"
           android:textColor="#f0f0f0" />
             <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:text="@string/Tagged"
           android:paddingLeft="10dip"
           android:textColor="#f0f0f0" />
              <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:text="@string/Tagged"
           android:paddingLeft="10dip"
           android:textColor="#f0f0f0" />
       </LinearLayout>
     </TableRow>
   
</TableLayout>
